Setup HTML using semantic elements

--- a/01/marc/index.html
+++ b/01/marc/index.html
@@ -9,16 +9,43 @@
     <link rel="stylesheet" href="styles/module.css">
   </head>
   <body>
-    <header>
+    <div id="wrapper">
+      <header>
+        A
+      </header>
 
-    </header>
-
-    <main>
-
-    </main>
-
-    <footer>
-
-    </footer>
+      <main>
+        <aside>
+          B
+        </aside>
+        <section>
+          <section>
+            <article>
+              C
+            </article>
+            <article>
+              D
+            </article>
+          </section>
+          <section>
+            <article>
+              E
+            </article>
+            <article>
+              F
+            </article>
+            <article>
+              G
+            </article>
+            <article>
+              H
+            </article>
+          </section>
+          <footer>
+            I
+          </footer>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
