Added classes and comments to semantic elements

--- a/01/marc/index.html
+++ b/01/marc/index.html
@@ -10,42 +10,46 @@
   </head>
   <body>
     <div id="wrapper">
-      <header>
+      <header class="a">
         A
       </header>
 
-      <main>
-        <aside>
+      <main class="b-i">
+        <aside class="b">
           B
         </aside>
-        <section>
-          <section>
-            <article>
+        <section class="c-i">
+          <section class="c-d">
+            <article class="c">
               C
             </article>
-            <article>
+            <article class="d">
               D
             </article>
-          </section>
-          <section>
-            <article>
-              E
-            </article>
-            <article>
-              F
-            </article>
-            <article>
-              G
-            </article>
-            <article>
-              H
-            </article>
-          </section>
-          <footer>
+          </section><!-- end c-d -->
+          <section class="e-h">
+            <section class="e-f">
+              <article class="e">
+                E
+              </article>
+              <article class="f">
+                F
+              </article>
+            </section><!-- end e-f -->
+            <section class="g-h">
+              <article class="g">
+                G
+              </article>
+              <article class="h">
+                H
+              </article>
+            </section><!-- end g-h -->
+          </section><!-- end e-h -->
+          <footer class="i">
             I
           </footer>
-        </section>
-      </main>
-    </div>
+        </section><!-- end c-i -->
+      </main><!-- end b-i -->
+    </div><!-- end wrapper -->
   </body>
 </html>
