Setup Reset and renamed css folder references

--- a/01/marc/index.html
+++ b/01/marc/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>UI Challenge 01</title>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/layout.css">
-    <link rel="stylesheet" href="styles/module.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/module.css">
   </head>
   <body>
     <div id="wrapper">
