--- a/01/marc/index.html
+++ b/01/marc/index.html
@@ -2,18 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>UI Challenge 01</title>
+    <script src="//use.edgefonts.net/droid-sans-mono.js"></script>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/module.css">
   </head>
   <body>
-    <div id="wrapper">
+    <div class="wrapper">
       <header class="a">
         A
       </header>
-
       <main class="b-i">
         <aside class="b">
           B
