Mobile layout complete

--- a/01/marc/index.html
+++ b/01/marc/index.html
@@ -12,45 +12,45 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="a">
+      <header class="box a">
         A
       </header>
-      <main class="b-i">
-        <aside class="b">
+      <main class="wrapper">
+        <aside class="box b">
           B
         </aside>
-        <section class="c-i">
-          <section class="c-d">
-            <article class="c">
+        <section class="wrapper">
+          <section class="wrapper">
+            <article class="box c">
               C
             </article>
-            <article class="d">
+            <article class="box d">
               D
             </article>
-          </section><!-- end c-d -->
-          <section class="e-h">
-            <section class="e-f">
-              <article class="e">
+          </section><!-- end c and d -->
+          <section class="wrapper">
+            <section class="wrapper">
+              <article class="box e">
                 E
               </article>
-              <article class="f">
+              <article class="box f">
                 F
               </article>
-            </section><!-- end e-f -->
-            <section class="g-h">
-              <article class="g">
+            </section><!-- end e and f -->
+            <section class="wrapper">
+              <article class="box g">
                 G
               </article>
-              <article class="h">
+              <article class="box h">
                 H
               </article>
-            </section><!-- end g-h -->
-          </section><!-- end e-h -->
-          <footer class="i">
+            </section><!-- end g and h -->
+          </section><!-- end e, f, g and h -->
+          <footer class="box i">
             I
           </footer>
-        </section><!-- end c-i -->
-      </main><!-- end b-i -->
+        </section><!-- end c through i -->
+      </main><!-- end b through i -->
     </div><!-- end wrapper -->
   </body>
 </html>
