Desktop layout complete

--- a/01/marc/index.html
+++ b/01/marc/index.html
@@ -15,42 +15,42 @@
       <header class="box a">
         A
       </header>
-      <main class="wrapper">
+      <main class="wrapper b-i">
         <aside class="box b">
           B
         </aside>
-        <section class="wrapper">
-          <section class="wrapper">
+        <section class="wrapper c-i">
+          <section class="wrapper c-d">
             <article class="box c">
               C
             </article>
             <article class="box d">
               D
             </article>
-          </section><!-- end c and d -->
-          <section class="wrapper">
-            <section class="wrapper">
+          </section><!-- end c-d -->
+          <section class="wrapper e-h">
+            <section class="wrapper e-f">
               <article class="box e">
                 E
               </article>
               <article class="box f">
                 F
               </article>
-            </section><!-- end e and f -->
-            <section class="wrapper">
+            </section><!-- end e-f -->
+            <section class="wrapper g-h">
               <article class="box g">
                 G
               </article>
               <article class="box h">
                 H
               </article>
-            </section><!-- end g and h -->
-          </section><!-- end e, f, g and h -->
+            </section><!-- end g-h -->
+          </section><!-- end e-h -->
           <footer class="box i">
             I
           </footer>
-        </section><!-- end c through i -->
-      </main><!-- end b through i -->
+        </section><!-- end c-i -->
+      </main><!-- end b-i -->
     </div><!-- end wrapper -->
   </body>
 </html>
